FIx button color on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ html {
 
 body {
   background-color: #efefef;
+  color: #333;
   font-size: 1.6rem;
 }
 
